.docker/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http-ingress
      address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: httpbin }
                http_filters:
                  # Call your gRPC authorization server *before* routing.
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc: { cluster_name: ext_authz }
                      failure_mode_allow: false

                  - name: envoy.filters.http.tap
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
                      common_config:
                        admin_config:
                          config_id: dbg-tap

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: httpbin
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: httpbin
        endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: httpbin, port_value: 8080 }}}}]}]
    - name: ext_authz
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 0.5s
      http2_protocol_options: {}   # gRPC requires HTTP/2
      load_assignment:
        cluster_name: ext_authz
        endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: authz, port_value: 3001 }}}}]}]
admin:
  address: { socket_address: { address: 0.0.0.0, port_value: 9901 } }
